[package]
authors = ["vaporyhumo"]
categories = ["parser-implementations"]
description = "TypedRuby AST"
edition = "2021"
keywords = ["typedruby", "ast"]
license = "Unlicense"
name = "ast"
readme = "README.md"
repository = "https://github.com/vaporyhumo/ruby-transpiler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nonempty = "0.8.1"
